--- a/android/build.gradle
+++ b/android/build.gradle
@@ -27,4 +27,5 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
+    compile 'top.zibin:Luban:1.1.3'
 }
